# Haskell-Breakout

./: README.md  Relatório.docx  TODO.txt  breakout.cabal  stack.yaml
src/: Logic.hs  Main.hs
