name:                breakout
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/breakout#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

executable breakout
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Logic
  build-depends:       base >= 4.7 && < 5
                       ,gloss
                       ,random >=1.1
                       ,sdl2
                       ,sdl2-mixer